--- a/travis.yml
+++ b/travis.yml
@@ -5,7 +5,7 @@ notifications:
   email: false
 matrix:
   include:
-  - os: osx
+  - os: win64
     language: generic
     cache: pip
 branches:
@@ -23,7 +23,7 @@ before_install:
 - pip install --upgrade pip
 - pip install Cython
 - pip install virtualenv
-- pip install py2app
+- pip install py2exe
 - pip install biplist
 install:
 - cd julius && npm install && npm install --save-dev electron-log && npm install --save-dev electron-rebuild && ./node_modules/.bin/electron-rebuild --version 1.6.0 && cd ..
@@ -45,7 +45,7 @@ install:
 script: source build_test.sh
 before_deploy:
 - python package_ncoda_macOS.py
-- python backend/setup.py py2app
+- python backend/setup.py py2exe
 - cp -r dist/nCoda.app nCoda.app/Contents/Resources/app/nCoda.app
 - hdiutil create -srcfolder nCoda.app nCoda.dmg
 deploy:
@@ -55,5 +55,5 @@ deploy:
   file: nCoda.dmg
   skip_cleanup: true
   on:
-    repo: nCoda/macOS
+    repo: alexandermorgan/Windows
     branch: main
