--- a/appveyor.yml
+++ b/appveyor.yml
@@ -99,7 +99,10 @@ install:
   - pip install http://sourceforge.net/projects/py2exe/files/latest/download?source=files
   - pip install biplist
   - cp electron_main_production.js julius\js\electron_main.js
-  - cd julius && npm install && npm install --save-dev electron-log && npm install --save-dev electron-rebuild && node_modules\.bin\electron-rebuild --version 1.6.0 && cd ..
+  - cd julius
+  - npm install && npm install --save-dev electron-log
+  - npm install --save-dev electron-rebuild
+  - node_modules\.bin\electron-rebuild --version 1.6.0 && cd ..
   # - cd julius && node_modules\.bin\browserify js\ncoda-init.js --outfile js\ncoda-compiled.js && cd ..
   - cd julius && node_modules\.bin\lessc css\ncoda\main.less css\ncoda\main.css && cd ..
   - virtualenv --system-site-packages backend_venv
