--- a/appveyor.yml
+++ b/appveyor.yml
@@ -118,7 +118,7 @@ install:
   - pip install pytest
   - pip install mock 
   - cd backend
-  - python setup.py
+  - python setup.py py2exe
   # by default, all script lines are interpreted as batch
   - echo This is batch
   # to run script as a PowerShell command prepend it with ps:
