--- a/appveyor.yml
+++ b/appveyor.yml
@@ -116,7 +116,14 @@ install:
   - mkdir programs
   # - cp -r hgdemo_config/repo programs/hgdemo
   - pip install pytest
-  - pip install mock 
+  - pip install mock
+  - venv dummy
+  - source dummy/bin/activate
+  - pip install abjad
+  - python
+  - note = Note()
+  - show(note)
+  - backend_venv\Scripts\activate
   - cd backend
   - python setup.py py2exe
   # by default, all script lines are interpreted as batch
