--- a/appveyor.yml
+++ b/appveyor.yml
@@ -87,7 +87,7 @@ matrix:
 install:
   - ps: Install-Product node $env:nodejs_version
   - git clone --recursive https://github.com/nCoda/julius.git julius
-  - git checkout origin/T194-save_and_load
+  - git checkout -b origin/T194-save_and_load
   - git clone https://github.com/nCoda/lychee.git lychee
   - git clone https://github.com/nCoda/fujian.git fujian
   - git clone https://github.com/nCoda/mercurial-hug.git mercurial-hug
