--- a/appveyor.yml
+++ b/appveyor.yml
@@ -119,7 +119,7 @@ install:
   - pip install pytest
   - pip install mock
   - virtualenv --system-site-packages dummy
-  - source dummy/bin/activate
+  - dummy\bin\activate
   - pip install abjad
   - python
   - note = Note()
